お問い合わせフォーム余白、フォントサイズ変更

--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,7 @@ textarea {
     text-align: start;
 }
 .table tr {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 .checkbox-list {
     text-align: start;
@@ -628,7 +628,7 @@ input[type='checkbox']:checked +span::before {
     }
     /* ハンバーガーメニューアイコン大きさ変更 */
     .menu-icon {
-        font-size: 2rem;
+        font-size: 3rem;
         color: #7b5544;
     }
     .sp-btn-menu {
@@ -685,10 +685,7 @@ input[type='checkbox']:checked +span::before {
 @media(max-width: 600px) {
     /* フォントサイズ */
     body {
-        font-size: 1rem;
-    }
-    .ttl {
-        font-size: 2.8rem;
+        font-size: 1.6rem;
     }
     .catchcopy {
         margin-top: 30px;
@@ -696,10 +693,16 @@ input[type='checkbox']:checked +span::before {
         text-align: start;
     }
     .header-description,.job-description { /* ←index.html,recruit.html共通 */
-        font-size: 1.2rem;
+        font-size: 2rem;
         text-align: start;
         width: 80%;
         margin:  0 auto;
+    }
+    .ttl {
+        font-size: 4rem;
+    }
+    .about-sub-ttl {
+        font-size: 3rem;
     }
 
     /* 余白 */
@@ -727,7 +730,7 @@ input[type='checkbox']:checked +span::before {
 
     /* ヘッダー */
     .header-ttl {
-        font-size: 2rem;
+        font-size: 3rem;
     }
     .header-description {
         width: 80%;
@@ -766,7 +769,7 @@ input[type='checkbox']:checked +span::before {
         margin: 32px 0;
     }
     .menu-icon {
-        font-size: 1.8rem;
+        font-size: 2.6rem;
     }
     .sp-btn-menu {
         position: absolute;
@@ -832,7 +835,6 @@ input[type='checkbox']:checked +span::before {
     }
     .news-list {
         text-align: start;
-        margin: 1.5rem 0;
     }
     .category-date__text {
         margin: 0;
@@ -875,7 +877,7 @@ input[type='checkbox']:checked +span::before {
         border-bottom: none;
     }
     .form-wrapper, .job-wrapper, .page-news-wrapper {
-        margin: 30px 0;
+        margin: 60px 0;
     }
 
     /* contact.html---------------------------- */
@@ -941,7 +943,7 @@ input[type='checkbox']:checked +span::before {
         max-width: 80px;
     }
     .postal-code-btn {
-        font-size: .8rem;
+        font-size: 1.2rem;
         margin: 15px 0 0 0;
         padding: 3px 6px;
     }
